Am adaugat un div

--- a/Template/template flex/template.html
+++ b/Template/template flex/template.html
@@ -32,6 +32,9 @@
             recusandae accusantium. Commodi, eos.
           </p>
         </div>
+        <div class="card">
+          
+        </div>
       </div>
     </div>
   </body>
