--- a/Template/template flex/template.html
+++ b/Template/template flex/template.html
@@ -32,9 +32,7 @@
             recusandae accusantium. Commodi, eos.
           </p>
         </div>
-        <div class="card">
-          
-        </div>
+        <div class="card">Continu nou</div>
       </div>
     </div>
   </body>
