--- a/Template/template flex/template.html
+++ b/Template/template flex/template.html
@@ -9,16 +9,25 @@
   <body>
     <div class="flex-container">
       <div class="nav-bar">
-        <div class="item">HOME</div>
-        <div class="item">ABOUT US</div>
-        <div class="item">CONTACT</div>
-        <div class="item">COMPANY</div>
-        <div class="item">SERVICES</div>
+        <ul class="navigation">
+          <li>HOME</li>
+          <li>ABOUT US</li>
+          <li>CONTACT</li>
+          <li>COMPANY</li>
+          <li>SERVICES</li>
+        </ul>
       </div>
       <div class="header">
         <div class="item1">TechCorporate</div>
         <div class="item2">Free PSD Website Template</div>
-        <div class="item3">Tel: xxxxx xxxxxxxxxx Mail: info@domain.com</div>
+        <div class="contact">
+          <p class="tel">
+            <a href="tel:xxxxx xxxxxxxxxx">Tel: xxxxx xxxxxxxxxx</a>
+          </p>
+          <p class="mail">
+            <a href="mailto:info@domain.com">Mail: info@domain.com</a>
+          </p>
+        </div>
       </div>
       <div class="BOX">
         <div class="box-1">TECHNOLOGY</div>
@@ -32,7 +41,6 @@
             recusandae accusantium. Commodi, eos.
           </p>
         </div>
-        
       </div>
     </div>
   </body>
