Am stilizat primele articole

--- a/Template/template flex/template.html
+++ b/Template/template flex/template.html
@@ -42,6 +42,47 @@
           </p>
         </div>
       </div>
+      <div class="articles1">
+        <div class="card">
+          <h2>Indonectetus facilis leos nibh</h2>
+          <div class="fakeimg">240 x 90px</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+            nobis consequatur atque maiores accusantium eos officiis enim quod
+            voluptates mollitia, deserunt reprehenderit minima illo dolorum. Hic
+            quos quasi eveniet, perspiciatis nulla laborum autem natus?
+          </p>
+          <div class="readmore">
+            <a href="#">Read More >></a>
+          </div>
+        </div>
+        <div class="card">
+          <h2>Indonectetus facilis leos nibh</h2>
+          <div class="fakeimg">240 x 90px</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+            nobis consequatur atque maiores accusantium eos officiis enim quod
+            voluptates mollitia, deserunt reprehenderit minima illo dolorum. Hic
+            quos quasi eveniet, perspiciatis nulla laborum autem natus?
+          </p>
+          <div class="readmore">
+            <a href="#">Read More >></a>
+          </div>
+        </div>
+        <div class="card">
+          <h2>Indonectetus facilis leos nibh</h2>
+          <div class="fakeimg">240 x 90px</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+            nobis consequatur atque maiores accusantium eos officiis enim quod
+            voluptates mollitia, deserunt reprehenderit minima illo dolorum. Hic
+            quos quasi eveniet, perspiciatis nulla laborum autem natus?
+          </p>
+          <div class="readmore">
+            <a href="#">Read More >></a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
