--- a/Template/template flex/style.css
+++ b/Template/template flex/style.css
@@ -44,7 +44,13 @@ li:hover {
   right: 50px;
   width: 160px;
   font-size: smaller;
-  top: 75px;
+  top: 90px;
+}
+.tel {
+  line-height: 5px;
+}
+.mail {
+  line-height: 1px;
 }
 a {
   color: gray;
@@ -56,26 +62,31 @@ a:hover {
 
 .BOX {
   display: flex;
-  justify-content: center;
   position: relative;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 15px;
 }
+
 .box-1 {
   background-color: skyblue;
   height: 300px;
-  width: 950px;
+  width: 96%;
+  margin-left: 40px;
   font-size: 100px;
   text-align: center;
   font-style: oblique;
-  -webkit-text-fill-color: white;
+  color: white;
+  line-height: 300px;
 }
 .box-2 {
   position: absolute;
   background-color: rgb(0, 113, 205);
   height: 100px;
-  width: 650px;
+  width: 50%;
   bottom: -30px;
-  right: 500px;
-  font-size: 60px;
+  right: 60px;
+  font-size: 80px;
   text-align: center;
   -webkit-text-fill-color: white;
 }
@@ -83,14 +94,65 @@ a:hover {
   position: absolute;
   background-color: rgb(0, 113, 205);
   text-align: center;
-  font-size: 10px;
-  height: 140px;
-  width: 260px;
-  -webkit-text-fill-color: white;
-  left: 500px;
+  font-size: 15px;
+  height: 170px;
+  width: 350px;
+  color: white;
+  left: 100px;
   top: 24px;
 }
-h2 {
-  border-bottom: 2px dotted white;
-  font-weight: lighter;
+.box-3 h2 {
+  border-bottom: dotted 2px;
+  padding-bottom: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.articles1 {
+  display: flex;
+  position: relative;
+  top: 100px;
+  gap: 30px;
+  justify-content: space-evenly;
+}
+.card {
+ 
+  width: 560px;
+  height: 600px;
+  background-color: lightgrey;
+}
+.card h2 {
+  border-bottom: dotted 2px grey;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-bottom: 10px;
+  font-size: 35px;
+  text-align: center;
+}
+.card p {
+  font-size: 25px;
+  text-align: start;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-left: 20px;
+}
+.fakeimg {
+  
+  background-color: rgb(60, 59, 59);
+  width: 80%;
+  height: 30%;
+  margin-left: 55px;
+  border: solid white 5px;
+  outline: solid black 1px;
+  font-size: 60px;
+  color: white;
+  text-align: center;
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+.readmore{
+  text-align: end;
+  margin-right: 20px;
+  font-size: 30px;
+ color:aliceblue
 }
