--- a/Template/template flex/template.html
+++ b/Template/template flex/template.html
@@ -53,7 +53,7 @@
             quos quasi eveniet, perspiciatis nulla laborum autem natus?
           </p>
           <div class="readmore">
-            <a href="#">Read More >></a>
+            <a class="read">Read More >></a>
           </div>
         </div>
         <div class="card">
@@ -66,7 +66,7 @@
             quos quasi eveniet, perspiciatis nulla laborum autem natus?
           </p>
           <div class="readmore">
-            <a href="#">Read More >></a>
+            <a class="read">Read More >></a>
           </div>
         </div>
         <div class="card">
@@ -79,9 +79,51 @@
             quos quasi eveniet, perspiciatis nulla laborum autem natus?
           </p>
           <div class="readmore">
-            <a href="#">Read More >></a>
+            <a class="read">Read More >></a>
           </div>
         </div>
+      </div>
+      <div class="articles2">
+        <div class="description">
+          <div class="fakeimg1">200 x 160px</div>
+          <h2>Indonectus facilis leos nibh</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque,
+            sint excepturi delectus incidunt laboriosam quidem velit! Neque cum
+            voluptate natus? Et autem cumque minus provident repellendus sit
+            deserunt dolor, est ipsa tempora deleniti laborum quam facilis quos!
+            Atque consectetur dolorem obcaecati corporis omnis, fugiat itaque
+            voluptate a nisi laboriosam?
+          </p>
+          <a class="continuereading">Continue Reading >></a>
+        </div>
+        <div class="categories">
+          <h2>Categories</h2>
+          <ul class="links">
+            <ol>
+              <a class="link1">>>Link Text Goes Here</a>
+            </ol>
+            <ol>
+              <a class="link2">>>Link Text Goes Here</a>
+            </ol>
+            <ol>
+              <a class="link3">>>Link Text Goes Here</a>
+            </ol>
+            <ol>
+              <a class="link4">>>Link Text Goes Here</a>
+            </ol>
+            <ol>
+              <a class="link5">>>Link Text Goes Here</a>
+            </ol>
+          </ul>
+        </div>
+      </div>
+      <div class="imagini">
+        <div class="pictures">174 x 100px</div>
+        <div class="pictures">174 x 100px</div>
+        <div class="pictures">174 x 100px</div>
+        <div class="pictures">174 x 100px</div>
+        <div class="pictures">174 x 100px</div>
       </div>
     </div>
   </body>
