--- a/Template/template flex/template.html
+++ b/Template/template flex/template.html
@@ -125,6 +125,10 @@
         <div class="pictures">174 x 100px</div>
         <div class="pictures">174 x 100px</div>
       </div>
+      <div class="bottom">
+        <a class="copyright">Copyright &#169 2009 Domain Name - All Rights Reserved</a>
+        <p>Template by OS Templates</p>
+      </div>
     </div>
   </body>
 </html>
