--- a/Template/template flex/style.css
+++ b/Template/template flex/style.css
@@ -147,6 +147,7 @@ a:hover {
   border: solid white 5px;
   outline: solid black 1px;
   font-size: 60px;
+  line-height: 200px;
   color: white;
   text-align: center;
   margin-bottom: 40px;
